<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Controller</string>
    <string name="action_settings">Settings</string>
    <string name="action_controller">Controller</string><string name="hello_world">Hello world!</string>
    <string name="title_activity_configure">ConfigureActivity</string>
    <string name="controller_number">Controller Number</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string> 
    <string name="ip_address">IP Address</string> 
    <string name="port_number">Port Number</string>
    

</resources>
